--- a/src/template.html
+++ b/src/template.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <header>
-      <header>
+      <div class="main-container">
         <h1>Knight Travails</h1>
-      </header>
-      <div class="board-container">
+        <div class="board-container">
+        </div>
+        <h2 class="status">Select a start position.</h2>
+        <button class="reset-button">Reset</button>
       </div>
-      <h2 class="status">Select a start position.</h2>
 
   </body>
 </html>
